crates/rolldown_utils/tests/ui/pass_harness/fail_leak_token_error.stderr
error: lifetime may not live long enough
  --> tests/ui/pass_harness/fail_leak_token_error.rs:20:5
   |
13 |   fn run<'run>(
   |          ---- lifetime `'run` defined here
...
20 |     Err(token)
   |     ^^^^^^^^^^ returning this value requires that `'run` must outlive `'static`
   |
   = note: requirement occurs because of the type `RunToken<'_, LeakingPass>`, which makes the generic argument `'_` invariant
   = note: the struct `RunToken<'run, P>` is invariant over the parameter `'run`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
